feat:web模块注解支持